@startuml
title Diagramme de classes - Pattern Mediator (Gestion du trafic aérien)

package "Médiateur" {
    interface TourDeControle {
        + enregistrerAvion(avion: Avion)
        + envoyerMessage(message: String, expediteur: Avion)
    }

    class TourDeControleImpl {
        - avions: List<Avion>
        + enregistrerAvion(avion: Avion)
        + envoyerMessage(message: String, expediteur: Avion)
    }

    TourDeControle <|.. TourDeControleImpl
}

package "Collègues" {
    class Avion {
        - nom: String
        - tourDeControle: TourDeControle
        + Avion(nom: String, tourDeControle: TourDeControle)
        + getNom(): String
        + envoyerMessage(message: String)
        + recevoirMessage(message: String, expediteur: Avion)
    }
}

' Relations
TourDeControleImpl "1" --> "0..*" Avion : gère
Avion "1" --> "1" TourDeControle : utilise

@enduml